After Ad Sense Link!

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
     gtag('config', 'G-HFY4L5C8MY');
   </script>
+  <script data-ad-client="ca-pub-1430481195187216" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width", initial-scale="1">
   <meta name="p:domain_verify" content="65975449e495229534628f184a515beb"/>
